--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "lodash.debounce": "^4.0.8",
     "modern-normalize": "^1.1.0",
     "notiflix": "^3.2.6",
-    "simplelightbox": "^2.14.0"
+    "simplelightbox": "^2.14.0",
+    "spin.js": "^4.1.1"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
